setup/Istio/virtual_services/Archive/01_virtual-service-kiali-mutual.yaml
---
# Service mesh visualization | Real-time topology, traffic flow, health
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali-mutual
  namespace: istio-system
spec:
  hosts:
  - "kiali.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
