setup/Istio/virtual_services/Archive/01_virtual-service-loki-mutual.yaml
---
# Log aggregation | Log querying and analysis
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-mutual
  namespace: istio-system
spec:
  hosts:
  - "loki.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loki
        port:
          number: 3100
---
