setup/Istio/virtual_services/Archive/01_virtual-service-tracing-mutual.yaml
---
# This VirtualService routes traffic from the http-echo-mutual host to the http-echo service.
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tracing-mutual
  namespace: istio-system
spec:
  hosts:
  - "tracing.${K8S_ENVIRONMENT}.slainte.at"
  gateways:
  - istio-gateways/slainte-at
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tracing
        port:
          number: 80
---
